[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-semantic-router-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"aiohttp>=3.9",
]

[project.scripts]
nano-semantic-router = "nano_semantic_router.__main__:main"
